payflow/k8s/payment-and-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: paynexus
spec:
  replicas: 2
  selector:
    matchLabels: { app: payment-service }
  template:
    metadata:
      labels: { app: payment-service }
    spec:
      containers:
        - name: payment-service
          image: paynexus/payment-service:1.0.0
          ports: [{ containerPort: 8082 }]
          resources:
            requests: { cpu: 250m, memory: 512Mi }
            limits: { cpu: 1000m, memory: 1Gi }
          readinessProbe:
            httpGet: { path: /actuator/health, port: 8082 }
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /actuator/health, port: 8082 }
            initialDelaySeconds: 40
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: paynexus
spec:
  selector: { app: payment-service }
  ports: [{ port: 8082, targetPort: 8082 }]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: paynexus
spec:
  replicas: 2
  selector:
    matchLabels: { app: api-gateway }
  template:
    metadata:
      labels: { app: api-gateway }
    spec:
      containers:
        - name: api-gateway
          image: paynexus/api-gateway:1.0.0
          ports: [{ containerPort: 8080 }]
          readinessProbe:
            httpGet: { path: /actuator/health, port: 8080 }
          resources:
            requests: { cpu: 150m, memory: 256Mi }
            limits: { cpu: 500m, memory: 512Mi }
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: paynexus
spec:
  selector: { app: api-gateway }
  ports: [{ port: 80, targetPort: 8080 }]
